--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "crypto": "^1.0.1",
     "electron": "^2.0.4",
     "nedb": "^1.8.0",
+    "node-2fa": "^1.1.2",
     "protobufjs": "^6.8.6",
     "secp256k1": "^3.5.0"
   }
