--- a/hummingbird-desktop/package.json
+++ b/hummingbird-desktop/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hycon-wallet-desktop",
   "productName": "Hycon lite wallet",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Hycon lite wallet - Desktop",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,8 @@
     "webpack": "^4.15.1"
   },
   "dependencies": {
+    "@glosfer/bitbox-app-hycon": "0.0.3",
+    "@glosfer/bitbox-nodejs": "^1.0.3",
     "@glosfer/hw-app-hycon": "0.0.8",
     "@ledgerhq/hw-transport-node-hid": "^4.16.0",
     "babel-runtime": "^6.26.0",
