--- a/package.json
+++ b/package.json
@@ -91,10 +91,12 @@
     "cordova-plugin-statusbar": "~2.4.2",
     "cordova-plugin-vibration": "~3.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-plugin-x-socialsharing": "^5.4.1",
+    "cordova-plugin-x-socialsharing": "^5.4.3",
+    "cordova-plugin-x-toast": "^2.7.2",
     "crypto": "^1.0.1",
     "electron": "^2.0.5",
     "es6-promise-plugin": "^4.2.2",
+    "history": "^4.7.2",
     "html2canvas": "^1.0.0-alpha.12",
     "js-file-download": "^0.4.4",
     "nedb": "^1.8.0",
@@ -126,103 +128,12 @@
       "cordova-custom-config": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-vibration": {}
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+ssh://git@github.com/Team-Hycon/hycon-gui.git"
-    },
-    "author": "",
-    "license": "ISC",
-    "homepage": "https://github.com/Team-Hycon/hycon-gui#readme",
-    "devDependencies": {
-      "@glosfer/hyconjs-util": "0.0.2",
-      "@material-ui/core": "^1.4.0",
-      "@material-ui/lab": "^1.0.0-alpha.7",
-      "@types/bip39": "^2.4.0",
-      "@types/chrome": "0.0.69",
-      "@types/hdkey": "^0.7.0",
-      "@types/long": "^4.0.0",
-      "@types/material-ui": "^0.20.8",
-      "@types/nedb": "^1.8.5",
-      "@types/onsenui": "^2.0.0",
-      "@types/qrcode.react": "^0.6.3",
-      "@types/react": "^16.3.16",
-      "@types/react-addons-update": "^0.14.19",
-      "@types/react-copy-to-clipboard": "^4.2.5",
-      "@types/react-dom": "^16.0.6",
-      "@types/react-onsenui": "^2.9.1",
-      "@types/react-paginate": "^4.3.2",
-      "@types/react-router-config": "^1.0.7",
-      "@types/react-router-dom": "^4.2.7",
-      "awesome-typescript-loader": "^5.0.0",
-      "bip39": "^2.5.0",
-      "css-loader": "^0.28.11",
-      "electron-rebuild": "^1.7.3",
-      "extract-text-webpack-plugin": "^4.0.0-beta.0",
-      "file-loader": "^1.1.11",
-      "hdkey": "^1.0.0",
-      "long": "^4.0.0",
-      "material-design-lite": "^1.3.0",
-      "material-ui": "^0.20.1",
-      "onsenui": "^2.10.3",
-      "protobufjs": "^6.8.6",
-      "qrcode.react": "^0.8.0",
-      "react": "^16.4.0",
-      "react-addons-update": "^15.6.2",
-      "react-copy-to-clipboard": "^5.0.1",
-      "react-dom": "^16.4.0",
-      "react-onsenui": "^1.11.1",
-      "react-paginate": "^5.2.3",
-      "react-router": "^4.2.0",
-      "react-router-config": "^1.0.0-beta.4",
-      "react-router-dom": "^4.2.2",
-      "react-tabs": "^2.2.2",
-      "source-map-loader": "^0.2.3",
-      "style-loader": "^0.21.0",
-      "tslint": "^5.11.0",
-      "typescript": "^2.8.3",
-      "uglifyjs-webpack-plugin": "^1.2.7",
-      "webpack": "^4.16.1",
-      "webpack-cli": "^3.0.8"
-    },
-    "dependencies": {
-      "@material-ui/icons": "^1.1.0",
-      "base-58": "0.0.1",
-      "blake2b": "^2.1.2",
-      "cordova-android": "^7.1.1",
-      "cordova-browser": "^5.0.3",
-      "cordova-icon": "^1.0.0",
-      "cordova-ios": "^4.5.4",
-      "cordova-plugin-chrome-apps-common": "^1.0.7",
-      "cordova-plugin-chrome-apps-runtime": "^2.0.0",
-      "cordova-plugin-chrome-apps-storage": "^1.0.4",
-      "cordova-plugin-whitelist": "^1.3.3",
-      "crypto": "^1.0.1",
-      "electron": "^2.0.5",
-      "nedb": "^1.8.0",
-      "node-2fa": "^1.1.2",
-      "npm": "^6.2.0",
-      "protobufjs": "^6.8.6",
-      "react-spring": "^5.5.1",
-      "secp256k1": "^3.5.0"
-    },
-    "cordova": {
-      "plugins": {
-        "cordova-plugin-whitelist": {},
-        "cordova-plugin-chrome-apps-storage": {},
-        "cordova-plugin-chrome-apps-runtime": {}
-      },
-      "platforms": [
-        "android",
-        "ios",
-        "browser"
-      ]
-    },
-    "platforms": [
-      "browser",
-      "android",
-      "ios"
-    ]
+      "cordova-launch-review": {},
+      "cordova-plugin-apprate": {},
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-fingerprint-aio": {
+        "FACEID_USAGE_DESCRIPTION": " "
+      }
+    }
   }
 }
